# vibebot

./: .gitignore  Dockerfile  PLAN.md  README.md  config.example.toml  docker-compose.yml  pyproject.toml  requirements.md
optional-modules/: CLAUDE.md  README.md
optional-modules/remindme/: __init__.py
optional-modules/twitterinfo/: __init__.py
optional-modules/urltitle/: __init__.py
optional-modules/youtubeinfo/: __init__.py
src/vibebot/: __init__.py  __main__.py  cli.py  config.py
src/vibebot/api/: app.py  auth.py  ws.py
src/vibebot/api/routes/: acl.py  channels.py  module_settings.py  modules.py  networks.py  repos.py  (+3 more)
src/vibebot/core/: acl.py  bot.py  events.py  guard.py  history.py  network.py  rate_limiter.py  roster.py  settings.py
src/vibebot/modules/: base.py  decorators.py  deps.py  loader.py  registry.py  settings.py  triggers.py
src/vibebot/scheduler/: jobs.py  service.py
src/vibebot/storage/: db.py  models.py
src/vibebot/tui/: api.py  app.py  commands.py  state.py  ws.py
tests/: test_acl.py  test_api.py  test_bind_resolve.py  test_config.py  test_events.py  test_guard.py  test_history.py  test_module_data_dir.py  test_module_dispatch.py  test_module_schedules.py  test_module_settings.py  test_module_triggers.py  test_network.py  test_rate_limiter.py  test_remindme_module.py  test_repo_deps.py  test_repo_subdir.py  test_roster.py  test_schedules.py  test_schedules_overview.py  test_settings.py  test_storage.py  test_tui.py  test_twitterinfo_module.py  test_youtubeinfo_module.py
tests/fixtures/: mock_ircd.py  settings_module.py
(+17 files in other folders)
